--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h2, h3 {
 
 
 
-@media screen and (min-width: 120px) and (max-width: 1080px) {
+@media screen and (min-width: 100px) and (max-width: 1080px) {
   main {
     height: 100ch;
     zoom: 1.5;
@@ -164,7 +164,10 @@ h2, h3 {
 
 
 
-
+.Ant  h3{
+  text-decoration: none;
+  color: #8cef83;
+}
 
 
 
